--- a/scss/04_blocks/_b-parts.scss
+++ b/scss/04_blocks/_b-parts.scss
@@ -94,6 +94,9 @@
 }
 
 @include mq(l) {
+  .b-heading__title br{
+    display: none;
+  }
   .b-heading__title .emphasis.icon {
     &--pink {
       &::before {
