--- a/css/style.css
+++ b/css/style.css
@@ -890,7 +890,7 @@ Layout
   padding: 24px 16px 16px 56px;
 }
 .s-faq .l-L03 .b-boxFlame__line .b-faqContents__boxTitle {
-  margin-bottom: 24px;
+  margin-bottom: 12px;
 }
 
 @media screen and (min-width: 1000px) {
@@ -1468,13 +1468,16 @@ Block
 }
 .b-creatorCranks__boxName--en {
   font-size: 0.375rem;
-  line-height: 1;
+  line-height: 1.6;
 }
 .b-creatorCranks__boxStatus {
   font-size: 0.4375rem;
 }
 .b-creatorCranks__boxJob {
   font-size: 0.4375rem;
+}
+.b-creatorCranks__boxJob span {
+  display: none;
 }
 
 /*
@@ -1678,6 +1681,12 @@ Block
   }
   .b-creatorCranks__boxJob {
     font-size: 0.75rem;
+  }
+  .b-creatorCranks__boxJob span {
+    display: inline;
+  }
+  .b-creatorCranks__boxJob br {
+    display: none;
   }
   /*
     FAQ
