--- a/scss/04_blocks/_b-parts.scss
+++ b/scss/04_blocks/_b-parts.scss
@@ -520,7 +520,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 16px;
+  padding: 16px 6px;
   &__boxLogo {
     width: 110px;
     padding-bottom: 16px;
@@ -528,10 +528,10 @@
   &__cardBox {
     display: flex;
     justify-content: space-between;
-    gap: 0 16px;
+    gap: 0 8px;
   }
   &__cardItem {
-    padding: 16px 8px;
+    padding: 16px 6px;
     border-radius: 8px;
     &.blue {
       background-color: $SLashCardColor_01;
@@ -632,10 +632,10 @@
       padding-bottom: 24px;
     }
     &__cardBox {
-      gap: 0 32px;
+      gap: 0 16px;
     }
     &__cardItem {
-      padding: 24px;
+      padding: 24px 18px 28px;
       border-radius: 8px;
     }
 
