--- a/css/style.css
+++ b/css/style.css
@@ -1376,7 +1376,7 @@ hamburger
 .openbtn {
   position: absolute;
   top: 50%;
-  right: 16px;
+  right: 0;
   transform: translateY(-50%);
   z-index: 9999; /*ボタンを最前面に*/
   cursor: pointer;
