--- a/scss/04_blocks/_b-hamburger.scss
+++ b/scss/04_blocks/_b-hamburger.scss
@@ -287,7 +287,7 @@ hamburger
 .openbtn {
   position: absolute;
   top: 50%;
-  right: 16px;
+  right: 0;
   transform: translateY(-50%);
   z-index: 9999; /*ボタンを最前面に*/
   cursor: pointer;
