価格の違い画像下部の注意書き

--- a/scss/02_layouts/_l-main.scss
+++ b/scss/02_layouts/_l-main.scss
@@ -336,6 +336,9 @@
       padding: 24px 16px 16px;
       margin-right: 16px;
     }
+    & .b-differenceDiagram__subText {
+      margin: 8px 8px 0;
+    }
   }
   & .l-L08 {
     & .b-difference__subText {
@@ -389,6 +392,9 @@
     }
     & .l-L07 {
       padding: 32px;
+      & .b-differenceDiagram__subText {
+        margin: 8px 16px 8px;
+      }
     }
     & .l-L08 {
       & .b-difference__subText {
