--- a/css/style.css
+++ b/css/style.css
@@ -634,6 +634,9 @@ Layout
   padding: 24px 16px 16px;
   margin-right: 16px;
 }
+.s-difference .l-L07 .b-differenceDiagram__subText {
+  margin: 8px 8px 0;
+}
 .s-difference .l-L08 .b-difference__subText {
   padding: 32px 16px;
 }
@@ -675,6 +678,9 @@ Layout
   }
   .s-difference .l-L07 {
     padding: 32px;
+  }
+  .s-difference .l-L07 .b-differenceDiagram__subText {
+    margin: 8px 16px 8px;
   }
   .s-difference .l-L08 .b-difference__subText {
     padding: 48px 24px;
@@ -1635,9 +1641,6 @@ Block
   }
   .b-difference__subText {
     font-size: 1.125rem;
-  }
-  .b-differenceDiagram__subText {
-    font-size: 0.8125rem;
   }
   /*
     reason
