sp納品フローカード内修正

--- a/scss/04_blocks/_b-flame.scss
+++ b/scss/04_blocks/_b-flame.scss
@@ -71,10 +71,16 @@
 
   &--flow {
     padding: 24px;
+    justify-content: center;
     & .b-guidance__icon {
       width: 60px;
     }
+    & .b-flowContents__title {
+      width: 110px;
+      text-align: center;
+    }
   }
+
 }
 
 .b-aboutContents {
