--- a/scss/04_blocks/_b-parts.scss
+++ b/scss/04_blocks/_b-parts.scss
@@ -426,16 +426,16 @@
 .b-reasonContents {
   &__boxText {
     position: relative;
-    padding-left: 36px;
+    padding-left: 32px;
     &::before {
       content: "";
       position: absolute;
       top: 0;
       left: 0;
-      bottom: 0;
+      bottom: 1px;
       margin: auto 0;
-      width: 20px;
-      height: 20px;
+      width: 16px;
+      height: 16px;
       border-radius: 3px;
       background-color: $blueColor;
     }
@@ -443,31 +443,39 @@
 
   &__boxResult {
     position: relative;
-    padding-left: 36px;
-    &::before,
-    &::after {
+    padding-left: 22px;
+    &::before {
       content: "";
       position: absolute;
       top: 0;
       left: 0;
       bottom: 0;
       margin: auto 0;
-      border-radius: 1.5px;
+      width: 14px;
+      height: 11px;
+      background-image: url(../img/reason_arrowicon.svg);
+      background-repeat: no-repeat;
+      background-size: contain;
     }
-    &:before {
-      left: 0px;
-      width: 20px;
-      height: 3px;
-      background: $blueColor;
+  }
+}
+
+@include mq(l) {
+  .b-reasonContents {
+    &__boxText {
+      padding-left: 36px;
+      &::before {
+        bottom: 4px;
+        width: 20px;
+        height: 20px;
+      }
     }
-    &:after {
-      left: 8px;
-      width: 8px;
-      height: 9px;
-      border-top: 3px solid $blueColor;
-      border-right: 3px solid $blueColor;
-      -webkit-transform: rotate(45deg);
-      transform: rotate(45deg);
+    &__boxResult {
+      padding-left: 32px;
+      &::before {
+        width: 20px;
+        height: 16px;
+      }
     }
   }
 }
